--- a/3_JS/js02.var.html
+++ b/3_JS/js02.var.html
@@ -42,7 +42,7 @@
         variable3 = [1,3,4,5,6];
         alert(variable3+":"+typeof variable3);
         //객체
-        variable3={
+        const variable={
             name:"이창진",
             age:19,
             id:"user1"
