--- a/5_JSP/jsp07_EL_JSTL/WebContext/index.html
+++ b/5_JSP/jsp07_EL_JSTL/WebContext/index.html
@@ -13,5 +13,7 @@
  	<a href="controller.do?command=elpage">EL</a>
  	<br>
  	<a href="controller.do?command=eltest">EL Test</a>
+ 	<br>
+ 	<a href="controller.do?command=jstlpage">JSTL</a>
 </body>
 </html>
